# CounterStrike-Starcraft-Warcraft

./: CMakeLists.txt  LICENSE  README.md
counter-strike/: CMakeLists.txt
counter-strike/includes/: Defines.h  Player.h  WeaponsLibraries.h  game.h
counter-strike/includes/pistols/: DesertEaglePistol.h  GlockPistol.h  pistol.h
counter-strike/src/: DesertEaglePistol.cpp  GlockPistol.cpp  Pistol.cpp  Player.cpp  game.cpp  main.cpp
lcs/: CMakeLists.txt
lcs/includes/: ColorMatrix.h  ColorSequenceFinder.h
lcs/src/: ColorMatrix.cpp  ColorSequenceFinder.cpp  main.cpp
lcs/tests/: test_5.txt
starcraft/: CMakeLists.txt
starcraft/includes/: battle_cruiser.h  carrier.h  constants.h  game.h  phoenix.h  protoss.h  protoss_ship.h  race.h  ship.h  terran.h  viking.h
starcraft/src/: battle_cruiser.cpp  carrier.cpp  game.cpp  main.cpp  phoenix.cpp  protoss.cpp  protoss_ship.cpp  race.cpp  ship.cpp  terran.cpp  viking.cpp
warcraft/: CMakeLists.txt
warcraft/Heroes/: Archmage.h  DeathKnight.h  Defines.h  DrawRanger.h  Game.h  Hero.h  Spell.h  SpellBook.h
warcraft/src/: Archmage.cpp  DeathKnight.cpp  DrawRanger.cpp  Game.cpp  Hero.cpp  main.cpp
